# junex

./: .env.example  .gitignore  README.md  alembic.ini  compose.yaml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 20260318_0001_create_equity_master_snapshot.py  20260318_0002_relax_sector_code_constraints.py  20260318_0003_drop_equity_master_checks.py  20260318_0004_create_equity_daily_bar.py  20260318_0005_add_daily_bar_revision_tracking.py  20260318_0006_create_market_calendar.py  20260318_0007_add_market_calendar_comments.py  20260318_0008_add_comments_for_all_tables.py  20260318_0009_create_earnings_calendar.py  20260318_0010_create_fins_summary.py  20260318_0011_create_topix_daily_bar.py  (+1 more)
app/: __init__.py  aggregator.py  cli.py  clients.py  config.py  db.py  features.py  jobs.py  llm.py  logging.py  models.py  stats.py
docs/: factor_completion.md  factor_definitions.md
scripts/: update_watch_4592.py
tests/: test_batch.py  test_duckdb_repository.py  test_earnings_calendar.py  test_fins_dividend.py  test_fins_summary.py  test_flow_structure_features.py  test_fundamental_event_features.py  test_index_bulk_import.py  test_index_daily_bar.py  test_jobs_duckdb.py  test_jquants.py  test_jquants_daily_bar.py  test_jquants_retries.py  test_jquants_wrapper.py  test_llm_auto_eval.py  test_llm_auto_eval_range.py  test_llm_eval_bundle.py  test_llm_prediction_eval.py  test_market_calendar.py  test_market_industry_linkage_features.py  test_next_day_labels.py  test_openai_batch.py  test_price_action_features.py  test_reference_sync.py  test_topix_daily_bar.py
(+3 files in other folders)
