[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "junex"
version = "0.1.0"
description = "A uv-based batch processing project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pandas>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "structlog>=25.0.0,<26.0.0",
]

[project.scripts]
junex = "app.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools]
packages = ["app"]
